# danger-os-cognitive

./: .gitignore  Cargo.toml  DESIGN.md  GEMINI.md  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: allocator.rs  inference.rs  lib.rs  main.rs  memory.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
