[workspace]
members = [
    "crates/kernel",
    "crates/runtime",
    "crates/tools",
    "crates/cli",
    "crates/runner",
]
resolver = "2"

[unstable]
bindeps = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
