[package]
name = "danger-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
danger-kernel = { path = "../kernel" }
danger-tools = { path = "../tools" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
petgraph.workspace = true
